test/spec_vectors/simd_load_extend/fail/module_12.wat
(module (memory 0) (func $v128.load32x2_u-arg-empty (result v128) (v128.load32x2_u)))